# transfemme-tailoring

./: .bazelrc  .envrc  .gitignore  .gitleaks.toml  AGENTS.md  BUILD.bazel  CLAUDE.md  Justfile  MODULE.bazel  README.md  SECURITY.md  flake.nix  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tinyland.repo.json
.agents/skills/tinyland-flywheel-bazel/: SKILL.md
.agents/skills/tinyland-flywheel-bazel/agents/: openai.yaml
.agents/skills/tinyland-repo-contract/: SKILL.md
.agents/skills/tinyland-repo-contract/agents/: openai.yaml
.agents/skills/tinyland-scaffold-doctor/: SKILL.md
.agents/skills/tinyland-spawn-sister-site/: SKILL.md
.agents/skills/tinyland-static-spoke/: SKILL.md
.agents/skills/tinyland-static-spoke/agents/: openai.yaml
.agents/skills/tinyland-whoami/: SKILL.md
.claude/skills/: tinyland-flywheel-bazel  tinyland-repo-contract  tinyland-scaffold-doctor  tinyland-spawn-sister-site  tinyland-static-spoke  tinyland-whoami
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  lanes.example.json  lanes.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md  provider-request.md
.github/workflows/: ci.yml  deploy-pages.yml
docs/: CI-SCHEMA.md  agent-adoption.md
docs/runbook/: flywheel-uplift.md
docs/schemas/: lanes.schema.json  public-preview-dispatch.schema.json  tinyland-repo-manifest.schema.json
docs/spec/: massageithaca-pattern-backfeed-2026-05-19.md  observability-shape-2026-06-05.md  runtime-broker-display-2026-05-19.md  skeleton-v5-watch-2026-06-05.md  static-projection-ingest-gate-2026-05-10.md  tinyland-repo-taxonomy-and-gitops-contract-2026-05-19.md
e2e/: overflow.spec.ts
scripts/: check-conformance.sh  check-inhouse-package-parity.py  flywheel-doctor.sh  gloriousflywheel-bazel.sh  lane-dispatch.py  rebrand.sh  scaffold-doctor-boundary.sh  static-projection-snapshot.mts  validate-lanes.py  validate-skills.py  whoami.py
scripts/bazel/: run-playwright-static-smoke.mjs  run-svelte-check.mjs  run-sveltekit-sync.mjs  run-vite-build.mjs
src/: app.css  app.html
src/lib/: theme.svelte.ts
src/lib/calc/: format.test.ts  format.ts  measurements.svelte.ts
src/lib/components/: Glyph.svelte  MeasurementsDrawer.svelte  SaturnMark.svelte
src/lib/components/calc/: DartBuilder.svelte  HemCuffMarker.svelte  SeamReserveCheck.svelte  TaperCalculator.svelte  WaistTakeInDistributor.svelte
src/lib/components/diagrams/: DartDiagram.svelte  HemDiagram.svelte  SeamOffsetDiagram.svelte  TaperDiagram.svelte
src/lib/projection/: static-snapshot.test.ts  static-snapshot.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/agent/: +page.server.ts  +page.svelte
src/routes/coats/: +page.svelte
src/routes/fitting/: +page.svelte
src/routes/machine/: +page.svelte
src/routes/measurements/: +page.svelte
src/routes/pants/: +page.svelte
src/routes/shirts/: +page.svelte
src/routes/sitemap.xml/: +server.ts
src/routes/tools/: +page.svelte
src/routes/vests/: +page.svelte
static/: agent-map.md  llms.txt  robots.txt
tofu/: README.md  backend.tf  main.tf  spoke.auto.tfvars  versions.tf
